Refactored to generate one json per resume

--- a/code/resume-finder/src/main/resources/edu/illinois/phantom/ui/Resume_Finder.fxml
+++ b/code/resume-finder/src/main/resources/edu/illinois/phantom/ui/Resume_Finder.fxml
@@ -45,7 +45,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.illinois.phantom.UI.ResumeFinderController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.illinois.phantom.ui.ResumeFinderController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
