--- a/code/resume-finder/src/main/resources/edu/illinois/phantom/ui/Resume_Finder.fxml
+++ b/code/resume-finder/src/main/resources/edu/illinois/phantom/ui/Resume_Finder.fxml
@@ -103,7 +103,7 @@
             <Label layoutX="54.0" layoutY="96.0" text="Skill Name (One per textbox)" />
             <Label layoutX="237.0" layoutY="96.0" text="Min Exp (Years)" />
             <TextField fx:id="CorpusDirTextfield" layoutX="52.0" layoutY="48.0" prefHeight="25.0" prefWidth="361.0" />
-            <Label layoutX="54.0" layoutY="18.0" prefHeight="17.0" prefWidth="156.0" text="Corpus Directory Path" />
+            <Label layoutX="54.0" layoutY="18.0" prefHeight="17.0" prefWidth="156.0" text="Location of Index" />
             </children>
         </AnchorPane>
     </children>
